fix(contentBox): removed negative z-index that hid fullwidth bg color

--- a/theme/themes/eea/extras/contentBox.less
+++ b/theme/themes/eea/extras/contentBox.less
@@ -13,7 +13,6 @@
   content: " ";
   position: absolute;
   height: 100%;
-  z-index: -1;
   margin-right: -50vw;
   left: 50%;
   right: 50%;
